labs/03-services-ingress/manifests/echo-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: echo-np
  labels: { app: echo }
spec:
  type: NodePort
  selector: { app: echo }
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30080
