labs/03-services-ingress/manifests/echo-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: echo
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: echo.k8s-labs.test
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: echo
                port: { number: 80 }
